resources/hello-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-hello-prod
  labels:
    app: hello-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-prod
  template:
    metadata:
      labels:
        app: hello-prod
    spec:
      containers:
      - name: hello
        image: kcandidate/hello:1.0.5
        ports:
        - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
