resources/hello-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-hello-prod
spec:
  type: NodePort
  selector:
    app: hello-prod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 31070
---
apiVersion: v1
kind: Service
metadata:
  name: keda-add-ons-http-interceptor-proxy
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
